2013-06-23
----
Alon
1) WooCommerce initial commit, includes bottom line in category and product page, widget in tab and footer, disable native reivew in product page tab, send MAP when shop admin mark order as complete, and allow shop admin to submit past orders. 

2013-06-23
----
Alon
1) Changes in admin design
2) Bug fix in past purchases.
3) Add conversion tracking code to thank you page.

2013-06-25
----
Alon
1) Re arrange code. 
2) Small bug fixes.
3) Add some css.

2013-06-25
----
Alon
1) Make all functions start with wc_
2) redirect user to settings page after activating yotpo plugin.

2013-06-25
----
Alon
1) Design changes.
2) Add b2b dashboard link in admin page.
3) Add checkbox which diasbles native review system.

2013-06-26
----
Alon
1) Add option to export local reviews.
2) archive yotpo-php lib into single phar file.