@@ -35,3 +35,8 @@ Alon
 Alon
 1) Add option to export local reviews.
 2) archive yotpo-php lib into single phar file.
+
+2013-06-26
+----
+Alon
+1) Small changes in reviews export.
